--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
 </head>
 <body>
-    
+    <h1>The Uggliest Page in the World</h1>
+
+    <div style="background-color: hotpink;border: solid 3px black;padding: 1rem ;">
+        <form>
+            <fieldset>
+                <p>
+                    <input type="checkbox" name="Ugly Factors"
+                    id="Hot Pink" value="Hot Pink" />
+                    <label for="Hot Pink">Hot Pink</label>
+                </p>
+                <p>
+                    <input type="checkbox" name="Ugly Factors"
+                    id="Annoying Music" value="Annoying Music"/>
+                    <label for="Annoying Music">Annoying Music</label>
+                </p>
+                <p>
+                    <input type="checkbox" name="Ugly Factors"
+                    id="Offset Text" value="Offset Text"/>
+                    <label for="Offset Text">Offset Text</label>
+                </p>
+                <p>
+                    <input type="checkbox" name="Ugly Factors"
+                    id="Confusing Inputs" value="Confusing Inputs"/>
+                    <label for="Confusing Inputs">Confusing Inputs</label>
+                </p>
+                <p>
+                    <button type="submit">Submit Order</button>
+                </p>
+            </fieldset>
+        </form>
+    </div>
+    <h1>How can I make this stop?</h1>
+    <div>
+        <p>Please type your name to close the page</p>
+        <input type="Number">
+    </div>
+
+    <h3>Just kidding, that's for numbers only</h3>
 </body>
 </html>
