--- a/Index.html
+++ b/Index.html
@@ -42,5 +42,22 @@
     </div>
 
     <h3>Just kidding, that's for numbers only</h3>
+
+    <div>
+    <h1>But why would you make this?</h1>
+    <ul>
+        <li>Helps me learn HTML</li>
+        <li>Helps me fight my boredom</li>
+        <li>I like ugly pages</li>
+        </ul>
+    </div>
+    <div style="border: 3px solid greenyellow;">
+        <h2>Sometimes you just need to divide things out</h2>
+        <p>It just feels nice to spread out the ugly and really bring the eye pain to life.</p>
+    </div>
+    <div style="background-color: red; border-color: honeydew;border: 5px solid black;">
+        <h3>Lets be honest though, I really hope this isn't graded on organization... </h3>
+    </div>
+
 </body>
 </html>
