changed text location

--- a/Index.html
+++ b/Index.html
@@ -55,7 +55,7 @@
         <h2>Sometimes you just need to divide things out</h2>
         <p>It just feels nice to spread out the ugly and really bring the eye pain to life.</p>
     </div>
-    <div style="background-color: red; border-color: honeydew;border: 5px solid black;">
+    <div style="background-color: red; border-color: honeydew;border: 5px solid black; text-align: right;">
         <h3>Lets be honest though, I really hope this isn't graded on organization... </h3>
     </div>
 
