added nav bar and footer

--- a/Index.html
+++ b/Index.html
@@ -62,5 +62,25 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Ct6BUPvE2sM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h5>Rick roll won't work thanks to Youtube. :(</h5>
 
+    <nav style="float: left; background-color: indianred; text-size-adjust: 150%; text-decoration-color: indigo;">
+        <h1>Little Ugly Navigation Bar</h1>
+        <ul>
+            <li>
+                <a href="https://www.fiverr.com">Tech Help</a>
+            </li>
+            <li>
+                <a href="https://imgur.com/gallery/ix1Pc">Images</a>
+            </li>
+            <li>
+                <a href="https://imgur.com/gallery/thRzBmp">Tables</a>
+            
+            </li>
+        </ul>
+    </nav>
     </body>
+    <footer style="background-color: indigo; text-underline-position: below; ">
+        <p>Copyright © 2021 The Pineapple Pen Company</p>
+
+        </p>
+    </footer>
 </html>
